@@ -1,13 +1,14 @@
-package com.controlroom.Application;
+/*package com.controlroom.Application;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 
+//Run->Edit Configurations->VM OPTIONS//--add-opens java.base/jdk.internal.loader=ALL-UNNAMED
 @SpringBootTest
 class ApplicationTests {
 
-	@Test
-	void contextLoads() {
-	}
+    @Test
+    void contextLoads() {
+    }
 
-}
+}*/
